// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EscrowedPaymentReminderSummaryNotification renders correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 16,
          "width": "100%",
        },
        Object {
          "elevation": 2,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1.6,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingRight": 16,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Bold",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
      >
        escrowedPaymentReminder
      </Text>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 60,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  }
                }
              >
                +491522345678
                 for 
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
                $
                9.31
              </Text>
            </Text>
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  }
                }
              >
                +491522345678
                 for 
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
                $
                9.31
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              walletFlow5:review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more 1 requests renders just it alone 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "width": "100%",
          },
          Object {
            "elevation": 2,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1.6,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "paddingRight": 16,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
                }
              }
              style={
                Object {
                  "height": 30,
                  "width": 30,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
              testID="EscrowedPaymentListItem/Title"
            >
              Invited and paid 
              +491522345678
               (
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                9.31
              </Text>
              )
            </Text>
            <View
              style={
                Object {
                  "justifyContent": "space-between",
                  "minHeight": 60,
                  "paddingTop": 2,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  }
                }
              >
                test message
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "marginTop": 12,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="EscrowedPaymentListItem/global:remind/Button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#42D689",
                          "fontFamily": "Hind-SemiBold",
                          "fontSize": 14,
                          "lineHeight": 18,
                        },
                        Object {
                          "paddingEnd": 15,
                        },
                      ]
                    }
                  >
                    global:remind
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="EscrowedPaymentListItem/global:reclaim/Button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#42D689",
                          "fontFamily": "Hind-SemiBold",
                          "fontSize": 14,
                          "lineHeight": 18,
                        },
                        Object {
                          "paddingEnd": 15,
                        },
                      ]
                    }
                  >
                    global:reclaim
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more than 2 requests renders just two 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 16,
          "width": "100%",
        },
        Object {
          "elevation": 2,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1.6,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingRight": 16,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Bold",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
      >
        escrowedPaymentReminder
      </Text>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 60,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  }
                }
              >
                +491522345678
                 for 
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
                $
                9.31
              </Text>
            </Text>
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  }
                }
              >
                +491522345678
                 for 
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
                $
                9.31
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              walletFlow5:review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
